[package]
name = "spl-memo"
version = "3.0.1"
description = "BBACHAIN Program Library Memo"
authors = ["Maintainers <maintainers@bbachain.com>"]
repository = "https://github.com/BTI-Labs/program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = "1.14.12"

[dev-dependencies]
solana-program-test = "1.14.12"
solana-sdk = "1.14.12"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
